<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/main_view_text"
            android:text="@string/features_tested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/type_text_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_text" />

        <Button
            android:id="@+id/spinner_selection_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinner_selection" />

        <Button
            android:id="@+id/custom_list_adapter_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_list_adapter" />

        <Button
            android:id="@+id/person_list_adapter_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Person List Adapter" />

        <Button
            android:id="@+id/search_view_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_view" />

        <Button
            android:id="@+id/action_bar_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/actionbar" />

        <Button
            android:id="@+id/viewpager_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewpager" />

        <Button
            android:id="@+id/dialogs_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogs" />

        <Button
            android:id="@+id/recycler_view_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/RecyclerView" />

        <Button
            android:id="@+id/pickers_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time_pickers" />

    </LinearLayout>
</ScrollView>
