<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/attribution"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:background="#464"
        android:gravity="center"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:textColor="#FFF"
        android:textSize="20sp"
        tools:text="Persons" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:background="#464"
        tools:listfooter="footer" />

</LinearLayout>
